*Empty MediaWiki Message*

--- a/Hiempsal_II.mw
+++ b/Hiempsal_II.mw
@@ -1,13 +1,13 @@
 {{Infobox biography}}
-'''Hiempsal II''' yella d agellid n [[Numidya]] deg uzgen amezwaru n timiḍi amezwaru uqbel Ɛisa, yemmut ɣer [[-60|60 uq. S.-Ɛ.]]. D mmi-s n [[Gauda]], d arbib n [[Yuɣurten]], dɣa d baba-s n [[Yuba Iru n Numidya|Juba {{Iru}}]].
+'''Hiempsal II''' yella d agellid n [[Numidya]] deg uzgen amezwaru n timiḍi amezwaru uqbel Ɛisa, yemmut ɣer [[-60|60 uqbel Ɛisa.]]. D mmi-s n [[Gauda]], d arbib n [[Yuɣurten]], dɣa d baba-s n [[Yuba I]].
 
 ==Tameddurt==
 
-Deg useggwas [[-88|88 uq. S.-Ɛ.]], sakkin tarennawt n [[Sylla]], imi [[Caius Marius|Marius]] d mmi-s rewlen seg Roma i Tafriqt, Hiempsal yemmager-iten s uqader yili yebɣa aten yeṭṭef d imeḥbas. Marius yefehmen asenfaṛ ines, yerwel swaswa kan deg wakud s tallalt n weltma-s n ugellid.
+Deg useggwas [[-88|88 uqbel Ɛisa.]], sakkin tarennawt n [[Sylla]], imi [[Caius Marius|Marius]] d mmi-s rewlen seg Roma i Tafriqt, Hiempsal yemmager-iten s uqader yili yebɣa aten yeṭṭef d imeḥbas. Marius yefehmen asenfaṛ ines, yerwel swaswa kan deg wakud s tallalt n weltma-s n ugellid.
 
-Hiempsal yettwaẓẓ̣eɛ seg usadbu sɣur ugdud-is, neɣ sɣur [[Hiarbas]], imḍebber n yiwen umur n tagelda tanumidit yettwalelen sɣur [[Gnaeus Domitius Ahenobarbus (anmastan deg -96)|Gnaeus Domitius Ahenobarbus]], imḍebber n ikabranen n Marius deg Tafriqt. Maca, deg useggwas [[-81|81 uq. S.-Ɛ.]], Sylla yeceggaɛ [[Gnaeus Pompeius Magnus|Pompeius]] iwakken ad yeḥaṛeb akabar n Marius dɣa yerrayas asadbu i Hiempsal, ayɣef akal yemmerni sɣur yiwen amtawa yettwazmel s [[Lucius Aurelius Cotta (anmastan deg -144)|Lucius Aurelius Cotta]].
+Hiempsal yettwaẓẓ̣eɛ seg usadbu sɣur ugdud-is, neɣ sɣur [[Hiarbas]], imḍebber n yiwen umur n tagelda tanumidit yettwalelen sɣur [[Gnaeus Domitius Ahenobarbus (anmastan deg -96)|Gnaeus Domitius Ahenobarbus]], imḍebber n ikabranen n Marius deg Tafriqt. Maca, deg useggwas [[-81|81 uqbel Ɛisa.]], Sylla yeceggaɛ [[Gnaeus Pompeius Magnus|Pompeius]] iwakken ad yeḥaṛeb akabar n Marius dɣa yerrayas asadbu i Hiempsal, ayɣef akal yemmerni sɣur yiwen amtawa yettwazmel s [[Lucius Aurelius Cotta (anmastan deg -144)|Lucius Aurelius Cotta]].
 
-Imi [[tribunus plebis]] [[Publius Servilius Rullus]] yesenteg [[Tuttra tagrant di Roma|isuḍaf tigranin]] ines deg useggwas [[-63|63 uq. S.-Ɛ.]], akal agi, yettufken s usakran i ugdud aṛumani sɣur [[Scipio Afriqi]], ur yenza ara, ayen yessenker urfan n [[Cicero]] (''De lege agraria'', I. 4, II. 22). Ɣef leḥsab n [[Suetonius]], (''Caesar'', 71), Hiempsal II yeḥkem dima ar [[-62|62 uq. S.-Ɛ.]].
+Imi [[tribunus plebis]] [[Publius Servilius Rullus]] yesenteg [[Tuttra tagrant di Roma|isuḍaf tigranin]] ines deg useggwas [[-63|63 uq. S.-Ɛ.]], akal agi, yettufken s usakran i ugdud aṛumani sɣur [[Scipio Afriqi]], ur yenza ara, ayen yessenker urfan n [[Cicero]] (''De lege agraria'', I. 4, II. 22). Ɣef leḥsab n [[Suetonius]], (''Caesar'', 71), Hiempsal II yeḥkem dima ar [[-62|62 uqbel Ɛisa.]].
 
 Ɣef leḥsab n [[Sallustius]] (''Yuɣurten'', 17), d amaru n udlis ɣef Amezruy n Tafriqt s tutlayt [[Taɣerma takartaǧit|tapunikit]].
 
