*Empty MediaWiki Message*

--- a/Tageldit_n_Inumiden.mw
+++ b/Tageldit_n_Inumiden.mw
@@ -1,12 +1,12 @@
 {{Databox}}
 [[Tugna:Mauretania et Numidia.jpg|thumb|448x448px|Muritanya d Numidya]]
-'''Numidya''' ([[-202|202 uq. S.-Ɛ.]] – [[-46|46 uq. S.-Ɛ.]]) tella, deg tazwara, d tagelda [[imaziɣen|tamaziɣt]] yezgan deg ugafa n [[Lezzayer|Zzayer]] tamirant dɣa tettṛuḥu armi d tsiga n umalu n [[Tunes|Tmurt n Tunes]] tamirant d ugmuḍ n [[Merruk|Tmurt n Umerruk]] tamirant armi d [[Asif n Melwit]]. 
+'''Numidya''' ([[-202|202 uqbel Ɛisa.]] – [[-46|46 uqbel Ɛisa.]]) tella, deg tazwara, d tagelda [[imaziɣen|tamaziɣt]] yezgan deg ugafa n [[Lezzayer]] tamirant dɣa tettṛuḥu armi d tsiga n umalu n [[Tunes|Tmurt n Tunes]] tamirant d ugmuḍ n [[Merruk|Tmurt n Umerruk]] tamirant armi d [[Asif n Melwit]]. 
 
-Numidya tella tamaneɣt-is d [[Sirṭa]] ( [[Qsenṭina]]<ref>Tafriqt d tawennaḍt-is tuṛufit d tasyatit, Sɣur Jean Jolly, {{p.|27}} [http://books.google.fr/books?id=ZXAYyzO_TLYC&pg=PA27&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDEQ6AEwAg#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Lezzayer 2011 Sɣur Jean-Paul Labourdette, Dominique Auzias, 54 [http://books.google.fr/books?id=gCrox_1izXYC&pg=PA54&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=4&ved=0CDYQ6AEwAw#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>H.-G. Pflaum, anmezruy n timiḍi wis XX: igiten n timlilit tagraɣlant, Sɣur Ségolène Demougin, École pratique des hautes études (Fransa). Aḥric n tussniwin timezrayin d "philologiques", {{p.|126}} [http://books.google.fr/books?id=ea2qD2tZKSAC&pg=PA126&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=5&ved=0CDsQ6AEwBA#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Tasedkalt tameɣradit n umezruy d tarakalt, Ableɣ 1, {{p.|841}} [http://books.google.fr/books?id=fOgOAAAAQAAJ&pg=PA841&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=6&ved=0CEEQ6AEwBQ#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Ammud n tisunḍiwin d tikatutin n Timetti tasenzikt, Ableɣ 7, Sɣur Timetti tasenzikt n Tamnaḍt n Qsenṭina, P 17 [http://books.google.fr/books?id=_Q0YAAAAYAAJ&pg=PA17&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=9&ved=0CFAQ6AEwCA#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Tasɣunt tafriqit, Sɣur Timetti tamezrayt tazzayrit, {{p.|402}} [http://books.google.fr/books?id=jMwOAAAAQAAJ&pg=RA1-PA402&dq=cirta+constantine+numidie&hl=fr&ei=X1r-TNHBCcyaOorr4KkM&sa=X&oi=book_result&ct=result&resnum=7&ved=0CEkQ6AEwBjgK#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Tafriqt: Arram amatu n Tafriqt taqdimt, Sɣur Avezac (Marie Armand Pascal, M. d'), Jean Yanoski, Louis Lacroix, Dureau de La Malle (Adolphe Jules César Auguste, M.), {{p.|182}} [http://books.google.fr/books?id=xMwTAAAAYAAJ&pg=PA182&dq=cirta+constantine+numidie&hl=fr&ei=X1r-TNHBCcyaOorr4KkM&sa=X&oi=book_result&ct=result&resnum=4&ved=0CDgQ6AEwAzgK#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref> tamirant, anda id ufan aẓekka n [[Masnsen]]). 
+Numidya tella tamaneɣt-is d [[Sirṭa]] ([[Qsenṭina]]<ref>Tafriqt d tawennaḍt-is tuṛufit d tasyatit, Sɣur Jean Jolly, {{p.|27}} [http://books.google.fr/books?id=ZXAYyzO_TLYC&pg=PA27&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDEQ6AEwAg#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Lezzayer 2011 Sɣur Jean-Paul Labourdette, Dominique Auzias, 54 [http://books.google.fr/books?id=gCrox_1izXYC&pg=PA54&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=4&ved=0CDYQ6AEwAw#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>H.-G. Pflaum, anmezruy n timiḍi wis XX: igiten n timlilit tagraɣlant, Sɣur Ségolène Demougin, École pratique des hautes études (Fransa). Aḥric n tussniwin timezrayin d "philologiques", {{p.|126}} [http://books.google.fr/books?id=ea2qD2tZKSAC&pg=PA126&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=5&ved=0CDsQ6AEwBA#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Tasedkalt tameɣradit n umezruy d tarakalt, Ableɣ 1, {{p.|841}} [http://books.google.fr/books?id=fOgOAAAAQAAJ&pg=PA841&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=6&ved=0CEEQ6AEwBQ#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Ammud n tisunḍiwin d tikatutin n Timetti tasenzikt, Ableɣ 7, Sɣur Timetti tasenzikt n Tamnaḍt n Qsenṭina, P 17 [http://books.google.fr/books?id=_Q0YAAAAYAAJ&pg=PA17&dq=cirta+constantine+numidie&hl=fr&ei=CVr-TPr1GcyYOo2hqawM&sa=X&oi=book_result&ct=result&resnum=9&ved=0CFAQ6AEwCA#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Tasɣunt tafriqit, Sɣur Timetti tamezrayt tazzayrit, {{p.|402}} [http://books.google.fr/books?id=jMwOAAAAQAAJ&pg=RA1-PA402&dq=cirta+constantine+numidie&hl=fr&ei=X1r-TNHBCcyaOorr4KkM&sa=X&oi=book_result&ct=result&resnum=7&ved=0CEkQ6AEwBjgK#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref>{{,}}<ref>Tafriqt: Arram amatu n Tafriqt taqdimt, Sɣur Avezac (Marie Armand Pascal, M. d'), Jean Yanoski, Louis Lacroix, Dureau de La Malle (Adolphe Jules César Auguste, M.), {{p.|182}} [http://books.google.fr/books?id=xMwTAAAAYAAJ&pg=PA182&dq=cirta+constantine+numidie&hl=fr&ei=X1r-TNHBCcyaOorr4KkM&sa=X&oi=book_result&ct=result&resnum=4&ved=0CDgQ6AEwAzgK#v=onepage&q=cirta%20constantine%20numidie&f=false]</ref> tamirant, anda id ufan aẓekka n [[Masnsen]]). 
 
 Numidya taṛumanit tella tezga ɣef iri agafa n Lezzayer d umalu n Tmurt n Tunes tamirant, s talast ar tamnaḍt taṛumanit n [[Muriṭanya]] (Lezzayer d Merruk deg ussan nneɣ) ar umalu, [[tamnaḍt taṛumanit n Tafriqt]] ([[agmuḍ n Tunes]] d [[Tatripulitant]] tamirant) ar ugmuḍ, Ilel Agrakal ɣer ugafa, d [[Aneẓruf|Uneẓruf]] ɣer unẓul. Imezdaɣen-is d [[Inumidyanen]].
 
-Numidya tella tesɛa aṭas igelliden, wid imulanen ugar wiy wiyaḍ nniḍen d [[Gaya (agellid)|Gaya]], [[Masnsen]], [[Misibsa]], [[Yugurten]], [[Yuba Iru n Numidya|Yuba {{Iru}}]], [[Yuba II]] d [[Ptulimi n Muriṭanya|Ptulimi]]. [[Imaziɣen]] urkiden nneɣ azin-[[Amsikel|imsukal]], Inumidiyen ferqen s [[Lεeṛc |leɛṛac]] imeẓliyen. Leɛṛac n uḥric agmuḍan n Numidya sɛan isem n [[Masyles]] (seg "Mis" d "Iles", "Iles" d isem n deffir-jeddi-s n Masnsen) d wid n uḥric utrim win (isem) n [[Masaesyles]].
+Numidya tella tesɛa aṭas igelliden, wid imulanen ugar wiy wiyaḍ nniḍen d [[Gaya (agellid)|Gaya]], [[Masnsen]], [[Misibsa]], [[Yugurten]], [[Yuba I]], [[Yuba II]] d [[Ptulimi n Muriṭanya|Ptulimi]]. [[Imaziɣen]] urkiden nneɣ azin-[[Amsikel|imsukal]], Inumidiyen ferqen s [[Lεeṛc |leɛṛac]] imeẓliyen. Leɛṛac n uḥric agmuḍan n Numidya sɛan isem n [[Masyles]] (seg "Mis" d "Iles", "Iles" d isem n deffir-jeddi-s n Masnsen) d wid n uḥric utrim win (isem) n [[Masaesyles]].
 
 
 
