*Empty MediaWiki Message*

--- a/Misipsa.mw
+++ b/Misipsa.mw
@@ -1,7 +1,7 @@
 {{Infobox biography}}
 '''Misipsa''' (? - [[-118|118 uq. S.-Ɛ.]]) neɣ '''Mekwesen''', d mmi-s d usemmezray n [[Masnsen]], yella d agellid n [[Numidya]]. Yekkused sɣuṛ akersi n Numidya deg [[-148|148 uq. S.-Ɛ.]] dɣa yeḥkem deg qrib kraḍt n tmerwin n iseggwasen.
 
-Misipsa d baba-s n  [[Hiempsal Iru|Hiempsal {{Iru}}]] d [[Aḍerbal (agellid n Numidya)|Aḍerbal]]. Yerna, yeṛbad [[Yugerten]] (mmi-s n gma-s [[Mastanabal]]) wagi daɣen ad d-yuɣal, di nnuba-s, agellid n [[Numidya]].
+Misipsa d baba-s n  [[Hiempsal I]] d [[Aḍerbal (agellid n Numidya)|Aḍerbal]]. Yerna, yeṛbad [[Yugerten]] (mmi-s n gma-s [[Mastanabal]]) wagi daɣen ad d-yuɣal, di nnuba-s, agellid n [[Numidya]].
 
 {{Igelliden n Numidya}}
 
