*Empty MediaWiki Message*

--- a/Arthur_von_Ramberg.mw
+++ b/Arthur_von_Ramberg.mw
@@ -4,7 +4,7 @@
 == Tameddurt ==
 Ramberg yekka-d seg tawacult n ifesyanen, baba-s Georg d agenses-marechal n igen utrici. Tawacut t-awey-d azwel n baron deg useggwas 1849. Gma-s d ajiniṛal-baron Hermann von Ramberg [[Hermann von Ramberg]] (1820-1899). Ramberg ula d netta yawey-d azwel n baron n [[tagelda n Bavaria]] deg useggwas 1875, yettssiwen ar taǧǧalt-is d arrawen is deg useggwas 1878.
 
-Yeɣer di [[Hanover]] dɣa yexdem [[Grand Tour]] ines di [[Ṭṭalyan]], di [[Majaṛ]] daɣen di [[duché n Styria|Styria]]. Yekcem deg useggwas 1840 ar tasdawit n [[Prag]]. Yuɣal d abalmud n [[Julius Hübner]] deg takadimit n tiẓuriyin tucbiḥin n Dresde deg useggwas 1842. Deg tallit agi yesbeɣe-d  ''Zzwaǧ n ikeḍwanen'' (ɣef leḥsab n [[Goethe]]) d ''Amenkad [[Henri Iru n Germania|Henri {{Iru}}]] deg taḥemla di Majaṛ''.
+Yeɣer di [[Hanover]] dɣa yexdem [[Grand Tour]] ines di [[Ṭṭalyan]], di [[Majaṛ]] daɣen di [[duché n Styria|Styria]]. Yekcem deg useggwas 1840 ar tasdawit n [[Prag]]. Yuɣal d abalmud n [[Julius Hübner]] deg takadimit n tiẓuriyin tucbiḥin n Dresde deg useggwas 1842. Deg tallit agi yesbeɣe-d  ''Zzwaǧ n ikeḍwanen'' (ɣef leḥsab n [[Goethe]]) d ''Amenkad [[Henri I n Germania|Henri I]] deg taḥemla di Majaṛ''.
 
 Ramberg yeṛuḥ deg useggwas 1850 ar [[Muncen]], anda yesseḍru tikla n tawsit dɣa yessuqqel imuhal n [[Friedrich von Schiller|Schiller]]. Yetwasem aselmad deg [[Agaru n tiẓuriyin tucbiḥin n Weimar|ugaru n tiẓuriyin tucbiḥin n Weimar]] deg useggwas 1860 daɣen sḍis iseggwasen sakin ar [[takademit n tiẓuriyin tucbiḥin n Muncen]]. Yessemter i [[Albert von Keller|Albert Keller]] ad yuɣal d-ameklay. Ramberg yesbeɣ sakin ''Tasenbert n [[Frédéric II n Hohenstaufen|Frédéric II]] di [[Palermo]]'', ''Hermann d Dorothée'' (ɣef leḥsab n Goethe), d ''Louise'' (ɣef leḥsab n usefru n [[Johann Heinrich Voss|Voss]]). Ramberg yella daɣen d ameskar n tafreskut n taxxamt n [[Martin Luther|Luther]] deg [[Tiɣremt n Wartbourg]].
 
