*Empty MediaWiki Message*

--- a/25_ɣuct.mw
+++ b/25_ɣuct.mw
@@ -4,7 +4,7 @@ Ass n 25 ɣuct d ass wis 237 n useggas (wis 238 deg iseggasen ''bisekstil''). Ll
 
 == Tilaliyin ==
 === Timiḍi wis 18 ===
-* [[1707]] : [[Luis Iru n Spenyul|Luis {{Iru}}]], [[Umuɣ n igelliden n Spenyul|agellid n Spenyul]] (∩ [[31 ɣuct]] 1724).
+* [[1707]] : [[Luis I n Spenyul|Luis I]], [[Umuɣ n igelliden n Spenyul|agellid n Spenyul]] (∩ [[31 ɣuct]] 1724).
 
 === Timiḍi wis 20 ===
 * [[1930]] : 
