*Empty MediaWiki Message*

--- a/3_yebrir.mw
+++ b/3_yebrir.mw
@@ -17,7 +17,7 @@ Ass n '''3 yebrir''' d [[ass]] wis 93 n [[Aseggas (tafada)|useggas]] n [[tafada 
 * [[1794]] : [[Aẓmaẓ n Ǧurǧ Dantun d idantunen|Tibeddi tis snat]] n uẓmaẓ n [[Ǧurǧ Jak Dantun|Dantun]] d idantunen zdat [[Lemḥekma agrawal]]<ref>Elphège Boursin, Augustin Challamet, ''Dictionnaire de la Révolution française: Institutions, hommes et faits…'', editions Jouvet et Cie, 1893</ref>.
 
 === Timiḍi wis 19 ===
-* [[1814]] : [[Sina (Fransa)|Asina]] idɣer adegger [[Napuliun Iru|Napuliun {{Iru}}]].
+* [[1814]] : [[Sina (Fransa)|Asina]] idɣer adegger [[Napuliun I]].
 
 == Timettanin ==
 === Timiḍi wis 10  ===
