--- a/3_yebrir.mw
+++ b/3_yebrir.mw
@@ -31,8 +31,8 @@ Ass n '''3 yebrir''' d [[ass]] wis 93 n [[Aseggas (tafada)|useggas]] n [[tafada 
 |commons=Category:3 April
 |commons azwel=3 yebrir
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n yebrir|03]]
