*Empty MediaWiki Message*

--- a/13_dujamber.mw
+++ b/13_dujamber.mw
@@ -4,7 +4,7 @@ Ass '''13 [[dujamber]]''' d ass wis 347 n useggas (wis 348 deg iseggasen ''bisek
 
 == Tidyanin ==
 === Timiḍi wis 11 ===
-* {{refnec|[[1084]] :  [[Süleyman Iru Shah|Süleyman {{Iru}} Shah]] yaker [[Antakya]].}}
+* {{refnec|[[1084]] :  [[Süleyman I Shah]] yaker [[Antakya]].}}
 
 === Timiḍi wis 16 ===
 * [[1560]] : [[Michel de L'Hospital]] {{refnec|yenṭeqed inaw n ulday}} n [[Addaden imuta n 1560|Addaden imuta]].
