*Empty MediaWiki Message*

--- a/13_dujamber.mw
+++ b/13_dujamber.mw
@@ -4,17 +4,17 @@ Ass '''13 [[dujamber]]''' d ass wis 347 n useggas (wis 348 deg iseggasen ''bisek
 
 == Tidyanin ==
 === Timiḍi wis 11 ===
-* {{refnec|[[1084]] :  [[Süleyman I Shah]] yaker [[Antakya]].}}
+* [[1084]] :  [[Süleyman I Shah]] yaker [[Antakya]].
 
 === Timiḍi wis 16 ===
-* [[1560]] : [[Michel de L'Hospital]] {{refnec|yenṭeqed inaw n ulday}} n [[Addaden imuta n 1560|Addaden imuta]].
+* [[1560]] : [[Michel de L'Hospital]] yenṭeqed inaw n ulday n [[Addaden imuta n 1560|Addaden imuta]].
 
 === Timiḍi wis 18 ===
-* {{refnec|[[1718]] : [[Guillaume Dubois]] yesiɣrey [[axnurz n Cellamare]].}}
+* [[1718]] : [[Guillaume Dubois]] yesiɣrey [[axnurz n Cellamare]].
 * [[1758]] : azdar n ''[[Duke William]]''
 
 === Timiḍi wis 19 ===
-* {{refnec|[[1808]] : tanerzawt n [[Madrid]] zdat igen n [[Napoléon Bonaparte|Napoléon]].}}
+* [[1808]] : tanerzawt n [[Madrid]] zdat igen n [[Napoléon Bonaparte|Napoléon]].
 
 === Timiḍi wis 21 ===
 * [[2003]] : [[Tamhelt tilelli n Iraq#Abbaz n Sdam Ḥusin|abbaz n Sdam Ḥusin]].
@@ -80,7 +80,7 @@ Ass '''13 [[dujamber]]''' d ass wis 347 n useggas (wis 348 deg iseggasen ''bisek
 |commons azwel=13 dujamber
 }}
 
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
