--- a/Azaɣar_(Tizi_Wezzu).mw
+++ b/Azaɣar_(Tizi_Wezzu).mw
@@ -65,7 +65,7 @@ Deg useggas [[1889]], imi tella tasehrest taṛumit, semman-as i taɣiwant '''Pi
  | url = http://www.archivesetculture.fr/livre-archives-et-culture-genealogie-atlas-de-l-algerie-1830-1960-336.html
 }}</ref>.
 
-{{refnec|S tanaḍt deg uzmez n 7 meɣres 1889, isem n Pirette yettwefkad i ulemmas n umezdaɣ uṛufi yetwexelqen di Azaɣar taddart n [[taɣiwant tamasayt]] n Tacentirt, am tajmilt i umhares yezban ass n 9 dujamber 1839 mgal agim n imnayen « Haǧut » i ẓedmen leɛzib At-Seman aqrib agrir  n Arbah}}.
+S tanaḍt deg uzmez n 7 meɣres 1889, isem n Pirette yettwefkad i ulemmas n umezdaɣ uṛufi yetwexelqen di Azaɣar taddart n [[taɣiwant tamasayt]] n Tacentirt, am tajmilt i umhares yezban ass n 9 dujamber 1839 mgal agim n imnayen « Haǧut » i ẓedmen leɛzib At-Seman aqrib agrir  n Arbah.
 
 == Tadamsa ==
 Taɣiwant tesɛa ɣef akal-is taneɣraft n imra akkw d imagraden iɣurbizen, taneɣraft n tigazuzin, taneɣraft n chewing-gum, daɣen aṭas iferdisen n aɣraf n ifexxaren dɣa tissirt n zzit d irden.
