--- a/Agraw_n_Euro.mw
+++ b/Agraw_n_Euro.mw
@@ -1,7 +1,7 @@
 [[Tugna:European union emu map fr.png|thumb|250px|alt= Takarḍa ɣef Tadukli tudmist d taqariḍant n Tadukli Tuṛufit|[[Tadukli tudmist d taqariḍant|UEM]] n [[Tadukli Tuṛufit]] :
 {{legend|#2060A0|timura n [[asun euro]]}}
-{{legend|#E07000|timura timaslaḍin n Tadukli Tuṛufit dɣa n {{nobr|MCE {{II}}}} war tikkin ar asun euro}}
-{{legend|#981245|timura timaslaḍin n Tadukli Tuṛufit beṛṛa [[Tasemseddut n ufmiḍi n ubeddel uṛufi|{{nobr|MCE {{II}}}}]]}}
+{{legend|#E07000|timura timaslaḍin n Tadukli Tuṛufit dɣa n {{nobr|MCE II}} war tikkin ar asun euro}}
+{{legend|#981245|timura timaslaḍin n Tadukli Tuṛufit beṛṛa [[Tasemseddut n ufmiḍi n ubeddel uṛufi|{{nobr|MCE II}}]]}}
 {{legend|#805090|timura nniḍen yetseqdacen euro am aqariḍ}}
 ]]
 
