*Empty MediaWiki Message*

--- a/19_dujamber.mw
+++ b/19_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''19 [[dujamber]]''' d ass {{exp|wis}}353 n useggas ({{exp|wis}}354 deg iseggasen ''bisekstil''). Llan 12 wussan deffir-s ar taggara n useggas.
+Ass '''19 [[dujamber]]''' d ass wis 353 n useggas (wis 354 deg iseggasen ''bisekstil''). Llan 12 wussan deffir-s ar taggara n useggas.
 <center>[[18 wamber]] - ''19 dujamber'' - [[20 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass '''19 [[dujamber]]''' d ass {{exp|wis}}353 n useggas ({{exp|wis}}354 deg ise
 |commons=Category:19 december
 |commons azwel=19 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
