--- a/31_dujamber.mw
+++ b/31_dujamber.mw
@@ -1,6 +1,6 @@
 {{Dujamber}}
 Ass '''31 [[dujamber]]''' d ass {{exp|wis}}365 n useggas ({{exp|wis}}366 deg iseggasen ''bisekstil''). D ass aneggaru n useggas.
-<center>[[30 wamber]] - ''31 dujamber'' - [[1ru yennayer]]</center>
+<center>[[30 wamber]] - ''31 dujamber'' - [[1 yennayer]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
