*Empty MediaWiki Message*

--- a/31_dujamber.mw
+++ b/31_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''31 [[dujamber]]''' d ass {{exp|wis}}365 n useggas ({{exp|wis}}366 deg iseggasen ''bisekstil''). D ass aneggaru n useggas.
+Ass '''31 [[dujamber]]''' d ass wis 365 n useggas (wis 366 deg iseggasen ''bisekstil''). D ass aneggaru n useggas.
 <center>[[30 wamber]] - ''31 dujamber'' - [[1 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass '''31 [[dujamber]]''' d ass {{exp|wis}}365 n useggas ({{exp|wis}}366 deg ise
 |commons=Category:31 december
 |commons azwel=31 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
