*Empty MediaWiki Message*

--- a/2_yennayer.mw
+++ b/2_yennayer.mw
@@ -1,6 +1,6 @@
 {{Yennayer}}
-Ass n 2 yennayer d ass {{exp|wis}}2 n useggas. Llan 363 wussan deffir-s ar taggara n useggas.
-<center>[[1 yennayer|1{{exp|ru}} yennayer]] - ''2 yennayer'' - [[3 yennayer]]</center>
+Ass n 2 yennayer d ass wis 2 n useggas. Llan 363 wussan deffir-s ar taggara n useggas.
+<center>[[1 yennayer]] - ''2 yennayer'' - [[3 yennayer]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
@@ -8,7 +8,5 @@ Ass n 2 yennayer d ass {{exp|wis}}2 n useggas. Llan 363 wussan deffir-s ar tagga
 |commons azwel=2 yennayer
 }}
 
-{{Agni Izemzan}}
-
-
+{{Months}}
 [[Taggayt:Ass n yennayer]]
