*Empty MediaWiki Message*

--- a/31_yennayer.mw
+++ b/31_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 31 yennayer d ass {{exp|wis}}31 n useggas. Llan 334 wussan deffir-s ar taggara n useggas, {{exp|wis}}335 deg iseggasen ''bisekstil''.
+Ass n 31 yennayer d ass wis 31 n useggas. Llan 334 wussan deffir-s ar taggara n useggas, wis 335 deg iseggasen ''bisekstil''.
 <center>[[30 yennayer]] - ''31 yennayer'' - [[1 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,8 @@ Ass n 31 yennayer d ass {{exp|wis}}31 n useggas. Llan 334 wussan deffir-s ar tag
 |commons=Category:31 january
 |commons azwel=31 yennayer
 }}
-{{Ass asental}}
 
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
