*Empty MediaWiki Message*

--- a/2_fuṛaṛ.mw
+++ b/2_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 2 fuṛaṛ d ass {{exp|wis}}33 n useggas. Llan 332 wussan deffir-s ar taggara n useggas, {{exp|wis}}333 deg iseggasen ''bisekstil''.
+Ass n 2 fuṛaṛ d ass wis 33 n useggas. Llan 332 wussan deffir-s ar taggara n useggas, wis 333 deg iseggasen ''bisekstil''.
 <center>[[1 fuṛaṛ]] - ''2 fuṛaṛ'' - [[3 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 2 fuṛaṛ d ass {{exp|wis}}33 n useggas. Llan 332 wussan deffir-s ar tag
 |commons=Category:2 february
 |commons azwel=2 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n fuṛaṛ]]
