*Empty MediaWiki Message*

--- a/29_fuṛaṛ.mw
+++ b/29_fuṛaṛ.mw
@@ -1,10 +1,9 @@
 {{fuṛaṛ}}
-Ass n 29 fuṛaṛ d [[arcay (akat n ukud)|ass amsircey]]. D ass {{exp|wis}}59 deg iseggasen ''bisekstil''.
-Llan 306 wussan deffir-s ar taggara n useggas.
+Ass n '''29 fuṛaṛ''' d [[arcay (akat n ukud)|ass amsircey]]. D ass wis 59 deg iseggasen ''bisekstil''. Llan 306 wussan deffir-s ar taggara n useggas.
 
-Yella ass n 29 fuṛaṛ deg iseggwasen [[2000]], [[2004]], [[2008]], [[2012]], win i d-yetteddun d win n useggas [[2016]] umbeɛd deg useggas [[2020]], dɣa deg useggas [[2024]] etc.
+Yella ass n 29 fuṛaṛ deg iseggasen [[2000]], [[2004]], [[2008]], [[2012]], win i d-yetteddun d win n useggas [[2016]] umbeɛd deg useggas [[2020]], dɣa deg useggas [[2024]] etc.
 
-Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggwasen (anya n iseggwasen bisekstil) n [[tafada julien]].
+Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggasen (anya n iseggasen bisekstil) n [[tafada julien]].
 
 <center>[[28 fuṛaṛ]] - ''29 fuṛaṛ'' - [[1 meɣres]]</center>
 
@@ -13,7 +12,7 @@ Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggwasen (anya n iseggwasen bisekstil
 |commons=Category:29 february
 |commons azwel=29 fuṛaṛ
 }}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n fuṛaṛ]]
