--- a/2_dujamber.mw
+++ b/2_dujamber.mw
@@ -1,13 +1,13 @@
 {{Dujamber}}
-Ass '''2 [[dujamber]]''' d ass {{exp|wis}}336 n useggas ({{exp|wis}}337 deg iseggasen ''bisekstil''). Llan 29 wussan deffir-s ar taggara n useggas.
-<center>[[1ru dujamber]] - ''2 dujamber'' - [[3 dujamber]]</center>
+Ass '''2 [[dujamber]]''' d ass wis 336 n useggas (wis 337 deg iseggasen ''bisekstil''). Llan 29 wussan deffir-s ar taggara n useggas.
+<center>[[1 dujamber]] - ''2 dujamber'' - [[3 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:2 december
 |commons azwel=2 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
