*Empty MediaWiki Message*

--- a/30_wamber.mw
+++ b/30_wamber.mw
@@ -1,15 +1,13 @@
 {{wamber}}
-Ass '''30 [[wamber]]''' d ass {{exp|wis}}334 n useggas ({{exp|wis}}335 deg iseggasen ''bisekstil''). Llan 31 wussan deffir-s ar taggara n useggas.
-<center>[[29 wamber]] - ''30 wamber'' - [[1ru dujamber]]</center>
+Ass '''30 [[wamber]]''' d ass wis 334 n useggas (wis 335 deg iseggasen ''bisekstil''). Llan 31 wussan deffir-s ar taggara n useggas.
+<center>[[29 wamber]] - ''30 wamber'' - [[1 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:30 november
 |commons azwel=30 wamber
 }}
-{{Ass asental}}
 
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n wamber]]
