*Empty MediaWiki Message*

--- a/31_tuber.mw
+++ b/31_tuber.mw
@@ -1,6 +1,6 @@
 {{Tuber}}
-Ass '''31 [[tuber]]''' d ass {{exp|wis}}304 n useggas ({{exp|wis}}305 deg iseggasen ''bisekstil''). Llan 61 wussan deffir-s ar taggara n useggas.
-<center>[[30 tuber]] - ''31 tuber'' - [[1ru wamber]]</center>
+Ass '''31 [[tuber]]''' d ass wis 304 n useggas (wis 305 deg iseggasen ''bisekstil''). Llan 61 wussan deffir-s ar taggara n useggas.
+<center>[[30 tuber]] - ''31 tuber'' - [[1 wamber]]</center>
 
 == Imagraden iqqenen ==
 
@@ -8,7 +8,7 @@ Ass '''31 [[tuber]]''' d ass {{exp|wis}}304 n useggas ({{exp|wis}}305 deg isegga
 |commons=Category:31 october
 |commons azwel=31 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
