*Empty MediaWiki Message*

--- a/2_tuber.mw
+++ b/2_tuber.mw
@@ -1,14 +1,13 @@
 {{Tuber}}
-Ass '''2 [[tuber]]''' d ass {{exp|wis}}275 n useggas ({{exp|wis}}276 deg iseggasen ''bisekstil''). Llan 90 wussan deffir-s ar taggara n useggas.
-<center>[[1ru tuber|1{{exp|ru}} tuber]] - ''2 tuber'' - [[3 tuber]]</center>
+Ass '''2 [[tuber]]''' d ass wis 275 n useggas (wis 276 deg iseggasen ''bisekstil''). Llan 90 wussan deffir-s ar taggara n useggas.
+<center>[[1 tuber]] - ''2 tuber'' - [[3 tuber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:2 October
 |commons azwel=2 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
 
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
