*Empty MediaWiki Message*

--- a/Tsunami.mw
+++ b/Tsunami.mw
@@ -3,3 +3,6 @@
 [[File:2011Sendai-NOAA-TravelTime-Ttvulhvpd9-06.jpg|thumb|Akud n uɣaras yetwaskazalen n [[tamdeswalt]] n tsunami yettwaweḍen sɣur [[Tizenzelt n 2011 tafsirt tamelwit n Tōhoku|argigi n wakal n Sendai n 11 meɣres 2011]].]]
 
 '''Tsunami''' (seg [[Japun|ajapuni]] 津波, tsu nami, meskuli « tayyugt n usagen ») d amazrar n [[timdeswalin]] n [[tumant tawalant|tallit]] tameqrant aṭas yetzreɛen seg [[Aman|tawennaḍt n waman]] ([[agaraw]], [[ilel]] neɣ [[agelmim]]<ref name="tsunamiGeneva">Katrina Kremer, Guy Simpson, Stéphanie Girardclos, ''Giant Lake Geneva tsunami in AD 563'', ''Nature Geoscience'' 5, {{p.|756–757}} (2012), doi:10.1038/ngeo1618. Yeffeɣ uqqin ass n 28 tuber 2012. Ẓeṛ [http://www.unige.ch/sciences/Actualites/2012/TsunamiDansLeLacLemanEnLAn563.html ''Tsunami deg ugelmim Léman deg useggwas 563''], Tasdawit n Genève, Sciences, Actualités 2012 ; dɣa {{en}} [http://www.nature.com/news/ancient-tsunami-devastated-lake-geneva-shoreline-1.11670 ''Ancient tsunami devastated Lake Geneva shoreline''], Jessica Marshall, ''Nature'', 28 October 2012</ref>), yussad seg taswiɛt kan n awliwel n ubleɣ ameqran n waman, yettwaweḍen sɣur [[tizenzelt]], [[tuccḍa n wakal]] adu-awlal neɣ [[tarkamt n uburkan|aṭṭerḍeq n uburkan]], dɣa yezmer ad yuɣal [[tayyugt|tayyugin]] tisedramin timeqranin<ref name="Brochure UNESCO">[http://itic.ioc-unesco.org/images/stories/awareness_and_education/great_waves/great_waves_fr_small.pdf Brochure en Français de l'UNESCO/NOAAA]</ref>.
+
+== Tiwelhiwin ==
+{{refs}}
