*Empty MediaWiki Message*

--- a/Olea.mw
+++ b/Olea.mw
@@ -1,4 +1,6 @@
-{{Automatic taxobox}}
+{{Databox}}
 Irem '''''Olea''''' yaɛqel [[tamessartut]], tawsit ''Olea'', tagrumma n leḥcawec yesɛan tiɣariwin tucrikin. Kraḍ adu-tiwsatin ttwexleqen-d sakin imuhal n uceggeṛ yenheṛ amesnacek [[Peter Shaw Green|P.S. Green]]<ref name="PSGreen2002">op. cit. (2002) {{p.|91}} : Amsleḥcic n [[Tibḥirin Tisnacekin Tigeldanin n Kew]] (Richmond, Surrey, Briṭanya Tameqrant)</ref>, Yegweḍ ar ad yaɛqel dɣa ad yessegrew 33 tilmas d 9 adu-tilmas gar aṭas n igdawalen i erkden s kraḍ timiḍiwin n tasnacekt d usnirem n umaḍal.
+== Tiwelhiwin ==
+{{refs}}
 
 [[Category:Imɣan]]
