*Empty MediaWiki Message*

--- a/Tuber_2014.mw
+++ b/Tuber_2014.mw
@@ -1,7 +1,7 @@
 {{Infobox Aggur|10|2014}}
 
 == Tidyanin ==
-* [[1ru tuber]]: 
+* [[1 tuber]]: 
 ** [[Umuɣ n ineɣlafen imezwura n Groenland|Taneɣlaft tamezwarut n Groenland]] [[Aleqa Hammond]] tɛelleq sɣur Amni (d nettat id ssuteren aɛellaq agi) acku tɛeḍḍel ad teɣerm  {{aferdis|106000|iqacucen}} [[aqacuc adanmaṛki|idanmaṛkiyen]] (ugar n {{aferdis|14000|n wuṛu}}), id ttasen seg isendyaq izuyaz dɣa ttwaṣerrifen i issiklen usligen. Tettubeddel sɣur aneɣlaf n tawennaḍt {[[Kim Kielsen]] i ttwawekkelen af Imedzi ;
 ** [[Nuṛwij|Anuṛwiji]] [[Jens Stoltenberg]] yuɣal [[amaru amata n l'OTAN]] wis 13 deg unfel n [[Danmaṛk|udanmaṛki]] [[Anders Fogh Rasmussen]] ;
 ** [[Gianfranco Terenzi]] d [[Guerrino Zanotti]] kecmen deg tawuri am [[Aqebṭan-ameksaw|iqebṭanen-imeksawen]] n [[Saint-Marin]].
