*Empty MediaWiki Message*

--- a/Asu.mw
+++ b/Asu.mw
@@ -2,8 +2,8 @@
 '''Asu''' ('''[[Assaɣ ussnan]]''': ''Bos primigenius indicus'') d yiwen n [[adu-telmest|wadu-tlmest]] n [[tifunasiyin|ifunasen]] yettuɣal uẓar-is ar tmurt n [[Lhend]], Asu d [[aɣersiw]] yeṭṭafaren [[uruks]], Awal n ''Asu'' d win id yellan seg  [[tutlayt tatibitt]] (''zaba'') anamak-is s Teqbaylit Ameddis neɣ Tayyu <br/>
 Asu iga d [[azger]] [[agrad|amegrud]] aladɣa deg tmura [[anezwu asbegsan|tisbegsanin]] yettusxdem i wẓuɣer n tɣawsiwin d tuẓẓga n uyefki d wučči n weksum-is 
 
-== Idem d usismel ==
-Yella wassaɣ ussnan n wasu d ''Bos indicus'' maca tura tettwasismel s talɣa tafurkant deg [[talmest|telmas]] ''Bos taurus'' anda yeddem isem ''Bos taurus indicus'' zdat n [[Taurine]] (''Bos taurus taurus'') yekk d [[aẓaṛ amezday|uẓar-nsen]] amezday [[uruks]] 
+== Isem d usismel ==
+Yella wassaɣ ussnan n wasu d ''Bos indicus'' maca tura tettwasismel s talɣa tafurkant deg [[talmest|telmas]] ''Bos taurus'' anda yeddem isem ''Bos taurus indicus'' zdat n [[Taurine]] (''Bos taurus taurus'') yekk d [[aẓaṛ amezday|uẓar-nsen]] amezday [[uruks]]
 
 == Aẓaṛ ==
 
