*Empty MediaWiki Message*

--- a/Yennayer_1954.mw
+++ b/Yennayer_1954.mw
@@ -1,4 +1,4 @@
-{{Infobox Aggur|01|1954}}
+{{Infobox month|01|1954}}
 
 == Tilaliyin ==
 * [[12 yennayer]] : [[Brahim Izri]], [[acennay]], [[ameskar-imsuddes-amkikez]] d [[amẓawan]] [[taqbaylit|aqbayli]]
