*Empty MediaWiki Message*

--- a/Ctember_1952.mw
+++ b/Ctember_1952.mw
@@ -1,4 +1,4 @@
-{{Infobox Aggur|09|month}}
+{{Infobox month|09|1952}}
 
 == Tilaliyin ==
 * [[21 ctamber]] : [[Ɛli Fergani]], amarir n takurt n uḍar.
