*Empty MediaWiki Message*

--- a/10_dujamber.mw
+++ b/10_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''10 [[dujamber]]''' d ass {{exp|wis}}344 n useggas ({{exp|wis}}345 deg iseggasen ''bisekstil''). Llan 21 wussan deffir-es ar taggara n useggas.
+Ass '''10 [[dujamber]]''' d ass wis 344 n useggas (wis 345 deg iseggasen ''bisekstil''). Llan 21 wussan deffir-s ar taggara n useggas.
 <center>[[9 wamber]] - ''10 dujamber'' - [[11 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass '''10 [[dujamber]]''' d ass {{exp|wis}}344 n useggas ({{exp|wis}}345 deg ise
 |commons=Category:10 december
 |commons azwel=10 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
