*Empty MediaWiki Message*

--- a/Ilemẓiyen_inaddalen_n_leqbayel.mw
+++ b/Ilemẓiyen_inaddalen_n_leqbayel.mw
@@ -4,7 +4,7 @@
 | fullname = Jeunesse Sportive de Kabylie
 | nickname = JSK <br /> JS Kabylie <br> Iknaṛiyen <br /> [[Izem|Izemawen]] n [[Ǧerǧer]]
 | founded = 1946
-| ground = [[Asarir n 1ru-Wamber-1954 (Tizi-Wezzu)|Asarir n 1ru wamber 1954]]
+| ground = [[Asarir n 1 wamber 1954 (Tizi Wezzu)|Asarir n 1 wamber 1954]]
 | capacity = 18,000
 | chairman = [[Crif Mellal]]
 | mgrtitle = Head Coach
