--- a/Muḥemmed_wis_6.mw
+++ b/Muḥemmed_wis_6.mw
@@ -1,5 +1,4 @@
-{{Infobox biography}}
-
-'''Muḥemmed wis 6''' d agllid n [[Merruk|Umerruk]] si 1999 ar ass-a. Muḥemmed wis 6 ilul-d di 21 Ɣuct 1963 yuɣal d agellid n Umerruk di Yulyu 1999 awaren imi yemmut baba-s agellid [[Ḥasan Wis 2|Ḥasan]]{{exp|wiss 2}}.
+{{Databox}}
+'''Muḥemmed wis 6''' d agllid n [[Merruk|Umerruk]] si 1999 ar ass-a. Muḥemmed wis 6 ilul-d di 21 Ɣuct 1963 yuɣal d agellid n Umerruk di Yulyu 1999 awaren imi yemmut baba-s agellid [[Ḥasan Wis 2|Ḥasan]] wis 2.
 
 [[Category:Tameddurt]][[Category:Merruk]]
