*Empty MediaWiki Message*

--- a/Ḥasan_wis_2.mw
+++ b/Ḥasan_wis_2.mw
@@ -1,4 +1,4 @@
-{{infobox biography}}
+{{Databox}}
 '''Ḥasan II''' (Ḥasan wis sin) 1929 - 1999, yella zik d agellid n [[Merruk|Umerruk]] si 1961 ar 1999, aseggas deg yemmut. Mmi-s [[Muḥemmed wis 6]] idwel d agllid awaren-is. Netta d [[aɛalawi]].
 
 [[Category:Tameddurt]]
