--- a/Sliman_Ɛazem.mw
+++ b/Sliman_Ɛazem.mw
@@ -211,7 +211,7 @@ Sliman Ɛazem, ulac af wacu ur icna ara. Yal aḥric n ddunit ur tijja. Icna ɣe
 
 == Tijmilin ==
 
-Tamdint n [[Paris]] (asun {{exp|wis}}14) tefka isem n '''Sliman Ɛazem''' i yiwwen n usarag.
+Tamdint n [[Paris]] (asun wis 14) tefka isem n '''Sliman Ɛazem''' i yiwwen n usarag.
 
 == Tamselyut, Iseddagen akk-d Izdayen Iberraniyen ==
 
