--- a/Awanak_asedduklan.mw
+++ b/Awanak_asedduklan.mw
@@ -1,4 +1,4 @@
 [[Tugna:Map of federal states.svg|thumb|right|350px|Iwanaken isedduklen deg amaḍal]]
-'''Awanak asedduklan''' ({{lang-la|''foedus''}}, tamsisit), d [[Awanek]] (s unnim) [[Anawak aɣella|aɣella]], i suddesen s aṭas iqerra imaniyin s [[Anabaḍ|unavaḍ]] i yal aqerru. Aẓayer n iqerra agi i segger s umata s [[Tamenḍawt]], dɣa ur yezmer ara ad yilli iseɣrebbet s taɣtest imanis n anavaḍ asedduklan alemmas..
+'''Awanak asedduklan''' ({{lang-la|''foedus''}}, tamsisit), d [[Awanek]] (s unnim) [[Anawak aɣella|aɣella]], i suddesen s aṭas iqerra imaniyin s [[Anabaḍ|unabaḍ]] i yal aqerru. Aẓayer n iqerra agi i segger s umata s [[Tamenḍawt]], dɣa ur yezmir ara ad yili iseɣrebbet s taɣtest iman-is n unabaḍ asedduklan alemmas..
 
 [[Category:Tasertit]]
