*Empty MediaWiki Message*

--- a/Akli_D.mw
+++ b/Akli_D.mw
@@ -1,4 +1,4 @@
-{{Infobox biography| caption =  Akli D di taẓunẓut n usarag Sliman Ɛazem di Paris asun {{exp|wis}}14}}
+{{Infobox biography|caption = Akli D di taẓunẓut n usarag Sliman Ɛazem di Paris asun wis 14}}
 
 '''Akli D''' d acennay aqbayli.
 
