--- a/Kamal_Tarwiḥt.mw
+++ b/Kamal_Tarwiḥt.mw
@@ -1,2 +1,2 @@
-[[Tugna:Kamel Tarwiht.jpg|thumbnail|right|Kamel Tarwiht di taẓunẓut n usarag Sliman Ɛazem di Paris asun {{exp|wis}}14]]
-Kamal Tarwiht d aneɣmas n BRTV
+[[Tugna:Kamel Tarwiht.jpg|thumbnail|right|Kamel Tarwiht di taẓunẓut n usarag Sliman Ɛazem di Paris asun wis 14]]
+'''Kamal Tarwiḥt''' d aneɣmas n [[BRTV]].
