*Empty MediaWiki Message*

--- a/Umuɣ_n_tiwilayin_n_Tmurt_Leqbayel.mw
+++ b/Umuɣ_n_tiwilayin_n_Tmurt_Leqbayel.mw
@@ -5,18 +5,18 @@
 
 === Tajumma === 
 
-Tawilayt ugaren tiyeḍ nniḍen : 
-* [[Tawilayt n Sṭif]] ( {{Exp|tis}}05) : {{Aferdis|6504|km|2}} (Tajumma-s t ugar tin n [[Falestin]]: {{Aferdis|6020|km|2}}) ; 
+Tawilayt ugaren tiyeḍ nniḍen: 
+* [[Tawilayt n Sṭif]] (tis 05): {{Aferdis|6504|km|2}} (Tajumma-s t ugar tin n [[Falestin]]: {{Aferdis|6020|km|2}}) ; 
 
-Tawilayt ddaw tiyeḍ nniḍen : 
-* [[Tawilayt n Bumerdas]] ( {{Exp|tis}}03) : {{Aferdis|1356|km|2}} (Tajumma-s t saẓ tin n [[Tigzirin n Firui]]: {{Aferdis|1393|km|2}}) ;
+Tawilayt ddaw tiyeḍ nniḍen: 
+* [[Tawilayt n Bumerdas]] (tis 03): {{Aferdis|1356|km|2}} (Tajumma-s t saẓ tin n [[Tigzirin n Firui]]: {{Aferdis|1393|km|2}}) ;
 
 
 === Afraq n imezdaɣen ===
 
-* [[Tawilayt n Sṭif]] ( {{Exp|tis}}05), d tin i sɛan amḍan n imezdaɣen i ugaren tiwilayin nniḍen : {{formatnum:1489979}}.
+* [[Tawilayt n Sṭif]] (tis 05), d tin i sɛan amḍan n imezdaɣen i ugaren tiwilayin nniḍen : {{formatnum:1489979}}.
 
-* [[Tawilayt n Borǧ Bu Aṛṛeriǧ]] ( {{Exp|tis}}02) :  {{Aferdis|628475|imez.}} (2 tiɣiwanin).
+* [[Tawilayt n Borǧ Bu Aṛṛeriǧ]] (tis 02): {{Aferdis|628475|imez.}} (2 tiɣiwanin).
 
 == Umuɣ n 7 tiwilayin n Tmurt n Iqbayliyen ==
 
