*Empty MediaWiki Message*

--- a/Umuɣ_n_tiwilayin_n_Tmurt_Leqbayel.mw
+++ b/Umuɣ_n_tiwilayin_n_Tmurt_Leqbayel.mw
@@ -6,10 +6,10 @@
 === Tajumma === 
 
 Tawilayt ugaren tiyeḍ nniḍen: 
-* [[Tawilayt n Sṭif]] (tis 05): {{Aferdis|6504|km|2}} (Tajumma-s t ugar tin n [[Falestin]]: {{Aferdis|6020|km|2}}) ; 
+* [[Tawilayt n Sṭif]] (tis 05): {{Aferdis|6504|km²}} (Tajumma-s t ugar tin n [[Falestin]]: {{Aferdis|6020|km|2}}) ; 
 
 Tawilayt ddaw tiyeḍ nniḍen: 
-* [[Tawilayt n Bumerdas]] (tis 03): {{Aferdis|1356|km|2}} (Tajumma-s t saẓ tin n [[Tigzirin n Firui]]: {{Aferdis|1393|km|2}}) ;
+* [[Tawilayt n Bumerdas]] (tis 03): {{Aferdis|1356|km²}} (Tajumma-s t saẓ tin n [[Tigzirin n Firui]]: {{Aferdis|1393|km|2}}) ;
 
 
 === Afraq n imezdaɣen ===
