*Empty MediaWiki Message*

--- a/16_ɣuct.mw
+++ b/16_ɣuct.mw
@@ -1,6 +1,7 @@
-<center>[[15 ɣuct]] - ''16 ɣuct'' - [[17 ɣuct]]</center>
 {{ɣuct}}
-Ass '''16 [[ɣuct]]''' d ass {{exp|wis}}228 n useggas ({{exp|wis}}229 deg iseggasen ''bisekstil''). Llan 137 wussan deffir-s ar taggara n useggas.
+Ass '''16 [[ɣuct]]''' d ass wis 228 n useggas (wis 229 deg iseggasen ''bisekstil''). Llan 137 wussan deffir-s ar taggara n useggas.
+
+<center>[[15 ɣuct]] - ''16 ɣuct'' - [[17 ɣuct]]</center>
 
 == Tilaliyin ==
 === Timiḍi wis 20 ===
@@ -12,7 +13,7 @@ Ass '''16 [[ɣuct]]''' d ass {{exp|wis}}228 n useggas ({{exp|wis}}229 deg isegga
 |commons=Category:16 august
 |commons azwel=16 ɣuct
 }}
-{{Ass asental}}
+
 {{Agni Izemzan}}
 
 
