--- a/Kamal_Tarwiḥt.mw
+++ b/Kamal_Tarwiḥt.mw
@@ -1,2 +1,2 @@
-{{Infobox biography|caption=Kamel Tarwiht di taẓunẓut n usarag Sliman Ɛazem di Paris asun wis 14}}
+{{Infobox biography|caption=Kamel Tarwiḥt di taẓunẓut n usarag Sliman Ɛazem di Paris asun wis 14}}
 '''Kamal Tarwiḥt''' d aneɣmas n [[BRTV]].
