*Empty MediaWiki Message*

--- a/Berbère_TV.mw
+++ b/Berbère_TV.mw
@@ -1,2 +1,2 @@
 {{Databox}}
-'''Berbère Télévision''' neɣ Berbère TV d tilizri tazzayrit s tutlayt n [[teqbaylit]]. Le siège ines yezga-d di temdint n [[Montreuil]] g tmurt n [[Fransa]].
+'''Berbère Télévision''' neɣ Berbère TV d tilizri tazzayrit s tutlayt n [[teqbaylit]]. Le siège-ines yezga-d di temdint n [[Montreuil]] g tmurt n [[Fransa]].
