*Empty MediaWiki Message*

--- a/Azaɣar_(Tizi_Wezzu).mw
+++ b/Azaɣar_(Tizi_Wezzu).mw
@@ -1,6 +1,5 @@
-{{Infobox city}}
-
-'''Azaɣar''' (neɣ Ɛin Zawiya), d yiwet [[taɣiwant n Tmurt Taqbaylit|taɣiwant]] n [[tawilayt n Tizi Uzzu|twilayt n Tizi Uzzu]] di [[Tamurt Taqbaylit|Tmurt Taqbaylit]], tella ar {{Aferdis|45|km}} deg unẓul-amalu n [[Tizi Uzzu]] dɣa ar {{Aferdis|115|km}} deg unẓul-agmuḍ n [[Zzayer]].
+{{Databox}}
+'''Azaɣar''' (neɣ Ɛin Zawiya), d yiwet [[taɣiwant n Tmurt Taqbaylit|taɣiwant]] n [[tawilayt n Tizi Wezzu|twilayt n Tizi Wezzu]] di [[Tamurt Taqbaylit|Tmurt Taqbaylit]], tella ar {{Aferdis|45|km}} deg unẓul-amalu n [[Tizi Uzzu]] dɣa ar {{Aferdis|115|km}} deg unẓul-agmuḍ n [[Zzayer]].
 
 
 === Asideg (timella) ===
