*Empty MediaWiki Message*

--- a/Tiɣiwanin_n_twilayt_n_Tizi_Wezzu.mw
+++ b/Tiɣiwanin_n_twilayt_n_Tizi_Wezzu.mw
@@ -1,13 +1,13 @@
-[[Tugna:Kabylie-Tizi Ouzou.png|200px|right|Tawilayt n Tizi Uzzu]]
+[[Tugna:Kabylie-Tizi Ouzou.png|200px|right|Tawilayt n Tizi Wezzu]]
 
 [[Tawilayt n Tizi Wezzu]] deg [[Tamurt Leqbayel|Tmurt Leqbayel]] tesɛa 67 tiɣiwanin. 
 {{clr|left}}
 
-== Tiɣiwanin n twilayt n Tizi Uzzu ==
-[[Tugna:Dz - Wilaya de Tizi-Ouzou (15) map.svg|thumb|center|upright=2.5|Tiɣiwanin n twilayt n Tizi Uzzu]]
+== Tiɣiwanin n twilayt n Tizi Wezzu ==
+[[Tugna:Dz - Wilaya de Tizi-Ouzou (15) map.svg|thumb|center|upright=2.5|Tiɣiwanin n twilayt n Tizi Wezzu]]
 {{clr|left}}
 
-Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Tizi Uzzu, tettaked i yal taɣiwant : angal [[Tanarit taɣelnawt n taddadanin (Lezzayer)|ONS]] ines, isem is, amezdaɣ ines d tajumma-s<ref>[http://www.tiziouzou-dz.com/presentation-organisation-administrative.htm Takarḍa n ufraq udbil n twilayt n Tizi Uzzu ɣef asmel web n twilayt.]Assefqed ass n 25/02/2011.</ref>.
+Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Tizi Wezzu, tettaked i yal taɣiwant : angal [[Tanarit taɣelnawt n taddadanin (Lezzayer)|ONS]] ines, isem is, amezdaɣ ines d tajumma-s<ref>[http://www.tiziouzou-dz.com/presentation-organisation-administrative.htm Takarḍa n ufraq udbil n twilayt n Tizi Wezzu ɣef asmel web n twilayt.]Assefqed ass n 25/02/2011.</ref>.
 
 {|class="wikitable sortable" align="center" width="45%" 
 |-
@@ -17,7 +17,7 @@ Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Tizi Uzzu, tettaked i yal 
 !Tajumma<br /><small>Km²</small><br />&nbsp;<br />
 |----
 |style="text-align:center"|1501
-||[[Tizi Uzzu]]
+||[[Tizi Wezzu]]
 |style="text-align:right"|{{Nts|135088|6}}
 |style="text-align:right"|{{Nts|102.36|5|100}}
 |----
@@ -357,12 +357,12 @@ Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Tizi Uzzu, tettaked i yal 
 
 == Zeṛ daɣen ==
 === Imagraden iqqenen ===
-* [[Tidayrayin n twilayt n Tizi Uzzu]]
-* [[Tawilayt n Tizi Uzzu]]
+* [[Tidayrayin n twilayt n Tizi Wezzu]]
+* [[Tawilayt n Tizi Wezzu]]
 
 === Izdayen uffiɣen ===
-* [http://www.tiziouzou-dz.com/decoupage-administratif.htm# Afraq Udbil n Twilayt n Tizi Uzzu]
+* [http://www.tiziouzou-dz.com/decoupage-administratif.htm# Afraq Udbil n Twilayt n Tizi Wezzu]
 
-[[Taggayt:Tawilayt n Tizi Uzzu]]
-[[Taggayt:Tiɣiwanin n Tawilayt n Tizi Uzzu]]
+[[Taggayt:Tawilayt n Tizi Wezzu]]
+[[Taggayt:Tiɣiwanin n Tawilayt n Tizi Wezzu]]
 [[Taggayt:Tiɣiwanin n Tmurt Leqbayel]]
